--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
-    <title>Pratyush</title>
+    <title>My CV</title>
 </head>
 <body>
     <div class="top-container">
